--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -16,8 +16,9 @@
         "# =====================================\n",
         "# 1. Setup and Configuation\n",
         "# =====================================\n",
+        "!pip install pyinputplus\n",
         "!pip install fetch-my-weather\n",
-        "!pip install hands-on-ai\n",
+        "# !pip install hands-on-ai\n",
         "\n",
         "import os\n",
         "import re\n",
@@ -26,32 +27,71 @@
         "import matplotlib.pyplot as plt\n",
         "import pyinputplus as pyip\n",
         "\n",
-        "from fetch_my_weather import get_weather\n",
-        "from hands_on_ai.chat import get_response\n",
+        "import fetch_my_weather\n",
+        "# from hands_on_ai.chat import get_response\n",
         "\n",
         "\n",
-        "os.environ['HANDS_ON_AI_SERVER'] = 'http://ollama.serveur.au'\n",
-        "os.environ['HANDS_ON_AI_MODEL'] = 'granite3.2'\n",
-        "os.environ['HANDS_ON_AI_API_KEY'] = input('Enter your API key: ')\n",
-        "\n",
+        "# os.environ['HANDS_ON_AI_SERVER'] = 'http://ollama.serveur.au'\n",
+        "# os.environ['HANDS_ON_AI_MODEL'] = 'granite3.2'\n",
+        "# os.environ['HANDS_ON_AI_API_KEY'] = input('Enter your API key: ')"
+      ],
+      "metadata": {
+        "id": "xWkZga4XK2_4",
+        "outputId": "31437727-866c-44b3-96db-b47540e675f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "xWkZga4XK2_4",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyinputplus in /usr/local/lib/python3.11/dist-packages (0.2.12)\n",
+            "Requirement already satisfied: pysimplevalidate>=0.2.7 in /usr/local/lib/python3.11/dist-packages (from pyinputplus) (0.2.12)\n",
+            "Requirement already satisfied: stdiomask>=0.0.3 in /usr/local/lib/python3.11/dist-packages (from pyinputplus) (0.0.6)\n",
+            "Requirement already satisfied: fetch-my-weather in /usr/local/lib/python3.11/dist-packages (0.4.0)\n",
+            "Requirement already satisfied: requests>=2.25.0 in /usr/local/lib/python3.11/dist-packages (from fetch-my-weather) (2.32.3)\n",
+            "Requirement already satisfied: pydantic>=1.8.0 in /usr/local/lib/python3.11/dist-packages (from fetch-my-weather) (2.11.4)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/dist-packages (from pydantic>=1.8.0->fetch-my-weather) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.33.2 in /usr/local/lib/python3.11/dist-packages (from pydantic>=1.8.0->fetch-my-weather) (2.33.2)\n",
+            "Requirement already satisfied: typing-extensions>=4.12.2 in /usr/local/lib/python3.11/dist-packages (from pydantic>=1.8.0->fetch-my-weather) (4.13.2)\n",
+            "Requirement already satisfied: typing-inspection>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from pydantic>=1.8.0->fetch-my-weather) (0.4.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.25.0->fetch-my-weather) (3.4.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.25.0->fetch-my-weather) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.25.0->fetch-my-weather) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.25.0->fetch-my-weather) (2025.4.26)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# =====================================\n",
         "# 2. Weather Data Functions\n",
         "# =====================================\n",
         "# Get weather data\n",
-        "def get_weather_data(location: str, forecast_days: int = 3) -> dict:\n",
+        "def get_weather_data(location: str, forecast_days: int = 3, units='m') -> dict:\n",
         "  try:\n",
         "    if forecast_days < 1 or forecast_days > 5:\n",
         "      return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
         "\n",
-        "    # Convert forecast_days to view_options (0 = 1 day, 1 = 2 days, ..., 4 = 5 days)\n",
-        "    view_option = str(forecast_days - 1)\n",
-        "\n",
-        "    # Fetch raw text weather data\n",
-        "    raw_text = fetch_my_weather.get_weather(\n",
+        "    response = fetch_my_weather.get_weather(\n",
         "      location=location,\n",
-        "      view_option=view_option,\n",
-        "      lang=\"en\"\n",
+        "      units=units,\n",
+        "      view_options=str(forecast_days - 1)\n",
         "    )\n",
+        "\n",
+        "    if hasattr(response, 'text'):\n",
+        "      raw_text = response.text\n",
+        "    else:\n",
+        "      raw_text = str(response)\n",
+        "\n",
+        "    if isinstance(raw_text, str) and raw_text.startswith(\"Error:\"):\n",
+        "      return {\"error\": raw_text}\n",
         "\n",
         "    if isinstance(raw_text, str) and raw_text.startswith(\"Error:\"):\n",
         "      return {\"error\": raw_text}\n",
@@ -140,7 +180,7 @@
         "  ax2.set_ylabel('Precipitation (mm)')\n",
         "  ax2.legend(loc='upper right')\n",
         "\n",
-        "  for i, condition in enumerate([entry.get('condition', '') for entry in weather_data]):\n",
+        "  for i, condition in enumerate([entry.get('condition', '') for entry in forecast_data]):\n",
         "    ax1.annotate(\n",
         "      condition,\n",
         "      (days[i], high_temps[i] + 1),\n",
@@ -153,15 +193,17 @@
         "\n",
         "  plt.title(f'Weather Forecast for {location}: Temperature and Precipitation')\n",
         "  plt.tight_layout()\n",
+        "  safe_location = re.sub(r'\\W+', '_', location)\n",
         "\n",
         "  if output_type == 'figure':\n",
         "    return fig\n",
         "  elif output_type == 'save':\n",
-        "    plt.savefig(f\"{forecast_data[0]['day']}_{location}_forecast.png\")\n",
+        "    plt.savefig(f\"{forecast_data[0]['day']}_{safe_location}_forecast.png\")\n",
         "    print(\"Graph saved!\")\n",
+        "    plt.close(fig)\n",
         "  else:\n",
         "    plt.show()\n",
-        "    plt.close()\n",
+        "    plt.close(fig)\n",
         "\n",
         "\n",
         "# Natural Language Processing\n",
@@ -211,21 +253,25 @@
         "        continue\n",
         "\n",
         "      forecast_days = pyip.inputInt(prompt=\"How many days forecast? (1-5): \", min=1, max=5)\n",
-        "      weather_data = get_weather_data(location, forecast_days)\n",
+        "      weather_data = get_weather_data(\n",
+        "        location=location,\n",
+        "        forecast_days=forecast_days,\n",
+        "        units='m'\n",
+        "      )\n",
         "\n",
-        "      if \"error\" not in weather_data:\n",
-        "        forecast_raw = weather_data['forecast']\n",
-        "        forecast_processed = preprocess_forecast_data(forecast_raw)\n",
-        "\n",
-        "        print(\"\\nWeather Forecast:\")\n",
-        "        for raw, proc in zip(forecast_raw, forecast_processed):\n",
-        "          print(f\"Day {proc['day']}: {raw['condition']}, \"\n",
-        "          f\"High: {proc['high_temp']}°C, Low: {proc['low_temp']}°C, \"\n",
-        "          f\"Rain: {proc['precipitation_mm']} mm\")\n",
-        "          create_visualisation(forecast_processed, weather_data[\"location\"])\n",
+        "      if not weather_data:\n",
+        "        print(\"Oops! No weather data returned.\")\n",
+        "      elif \"error\" in weather_data:\n",
+        "        print(f\"Oops! Something went wrong: {weather_data['error']}\")\n",
+        "      elif not weather_data.get(\"forecast\"):\n",
+        "        print(\"Oops! No forecast data received. Please try a different location or day range.\")\n",
         "      else:\n",
-        "        print(f\"Sorry, I couldn't find weather data for '{location}'. Please try another city.\")\n",
-        "        continue\n",
+        "        for day in weather_data[\"forecast\"]:\n",
+        "          print(f\"Day {day['day']}: {day['condition']}, High: {day['high_temp']}, \"\n",
+        "                f\"Low: {day['low_temp']}, Precipitation: {day['precipitation_mm']} mm\")\n",
+        "\n",
+        "        processed_data = preprocess_forecast_data(weather_data[\"forecast\"])\n",
+        "        create_visualisation(processed_data, location)\n",
         "\n",
         "    except ConnectionError:\n",
         "      print(\"It looks like there's a problem with your internet connection. Please check and try again.\")\n",
@@ -247,19 +293,66 @@
         "id": "B2JKlJfrGgIb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 108
+          "height": 490
         },
-        "outputId": "113ee146-07bd-459a-b0c5-46ffbc62062b"
+        "outputId": "8662013f-9226-4d10-95b7-d573bb210fdb"
       },
       "id": "B2JKlJfrGgIb",
-      "execution_count": 4,
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi I'm Weatherwise App!\n",
+            "I can help you check the weather forecast.\n",
+            "Which city are you interested in? (type 'exit' to quit)\n",
+            "Perth\n",
+            "How many days forecast? (1-5): 4\n",
+            "Oops! No forecast data received. Please try a different location or day range.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-59-a38b4414fb33>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[0;31m# =====================================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 215\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m \u001b[0;31m# Testing and Examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-59-a38b4414fb33>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    172\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m       \u001b[0mlocation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Which city are you interested in? (type 'exit' to quit)\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mlocation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'exit'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Goodbye! Have a nice day!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(forecast_data)"
+      ],
+      "metadata": {
+        "id": "GqY2PhbGZ8DE",
+        "outputId": "5885f913-8148-46b8-8ae4-e04e50da0629",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        }
+      },
+      "id": "GqY2PhbGZ8DE",
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-4-51a1329fdd67>, line 96)",
+          "ename": "NameError",
+          "evalue": "name 'forecast_data' is not defined",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-51a1329fdd67>\"\u001b[0;36m, line \u001b[0;32m96\u001b[0m\n\u001b[0;31m    \"condition\": entry.get('condition', \"Unknown\")\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-54-91e1394f80e7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mforecast_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'forecast_data' is not defined"
           ]
         }
       ]
@@ -268,9 +361,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "1gUO29nkEey1"
+        "id": "VOYmOjfsZ8kB"
       },
-      "id": "1gUO29nkEey1",
+      "id": "VOYmOjfsZ8kB",
       "execution_count": null,
       "outputs": []
     }
