Delete some lines

--- a/submission/weatherwise.ipynb
+++ b/submission/weatherwise.ipynb
@@ -371,10 +371,7 @@
         "# 6. Main Script\n",
         "# =====================================\n",
         "if __name__ == '__main__':\n",
-        "    main()\n",
-        "\n",
-        "# Testing and Examples\n",
-        "# Include sample input/output for each function"
+        "    main()"
       ],
       "metadata": {
         "id": "B2JKlJfrGgIb"
